--- a/css/_desktop.scss
+++ b/css/_desktop.scss
@@ -26,6 +26,7 @@ body {
                     font-size: 36px;
                     font-weight: 700;
                     font-family: 'Open Sans', sans-serif;
+                    color: $grey-body;
                 }
                 padding: 15px 0px;
             }
