--- a/css/_smartphone.scss
+++ b/css/_smartphone.scss
@@ -50,26 +50,6 @@
             p {
                 font-size: 14px;
             }
-            .type-tag {
-                p::before {
-                    content: "";
-                display: inline-block;
-                height: 0.5em;
-                width: 8%;
-                margin-left: 0%;
-                margin-right: 20px;
-                    border-top: 2px solid $grey-text;
-                }
-                p::after {
-                    content: "";
-                display: inline-block;
-                height: 0.5em;
-                width: 8%;
-                margin-right: 0%;
-                margin-left: 20px;
-                    border-top: 2px solid $grey-text;
-                }
-            }
             .title {
                 h1 {
                     font-size: 26px;
@@ -182,5 +162,101 @@
             }
             padding: 0px 15px;
         }
+    }
+
+    //---------- SINGLE-POST ----------//
+    .single-post {
+        //---------- POST ----------//
+        .post {
+            .artikel {
+                p {
+                    font-size: 14px !important;
+                }
+                .title {
+                    h1 {
+                        font-size: 26px !important;
+                    }
+                }
+                .image {
+                    img {
+                        height: 250px !important;
+                    }
+                    height: 250px !important;
+                }
+                .artikel-footer {
+                    p {
+                        line-height: 30px !important;
+                    }
+                    .date {
+                        p {
+                            float: left !important;
+                        }
+                    }
+                }
+            }
+            padding: 0px 15px;
+        }
+
+        //---------- FORM-COMMENT ----------//
+        .form-comment {
+            .wr-form-comment {
+                .title {
+                    h1 {
+                        font-size: 26px !important;
+                    }
+                }
+                .form {
+                    table {
+                        td {
+                            input {
+                                font-size: 14px !important;
+                                padding: 10px !important;
+                                height: 40px !important; 
+                                width: 169px !important;
+                            }
+                        }
+                    }
+                    textarea {
+                        padding: 10px !important;
+                        font-size: 14px !important;
+                    }
+                    button {
+                        p {
+                            font-size: 14px !important;
+                        }
+                    }
+                }
+            }
+            padding: 0px 15px;
+        }
+
+        //---------- COMMENT ----------//
+        .comment {
+            padding: 0px 15px;
+        }
+        .wr-comment {
+             //----------HEADING-COMMENT----------//
+             .heading-comment {
+                 .navbar-header {
+                     h1 {
+                         font-size: 26px !important;
+                     }
+                     .badge {
+                         font-size: 14px !important;
+                     }
+                 }
+             }
+
+             //----------COMMENTS-CONTAINER----------//
+             .comments-container {
+                 .comments-list .comment-box {
+                     width: 267px !important;
+                 }
+                 .reply-list .comment-box {
+                    width: 194px !important;
+                 }
+             }
+        }
+        padding-top: 130px !important;
     }
 }
