--- a/css/_smartphone.scss
+++ b/css/_smartphone.scss
@@ -30,6 +30,7 @@
                         }
                    }
                }
+               padding: 0px 15px;
             }
             height: auto;
         }
