nambah page about

--- a/css/_device-1024.scss
+++ b/css/_device-1024.scss
@@ -16,4 +16,19 @@
              }
         }
     }
+
+    //---------- ABOUT ----------//
+    .about-page {
+
+        //----------OUR-TEAM----------//
+        .our-team {
+            .content-slider {
+                .team-list {
+                    width: 400px !important;
+                    padding: 100px !important;
+                }
+            }
+        }
+        padding-top: 130px !important;
+    }
 }
