--- a/css/_tablet.scss
+++ b/css/_tablet.scss
@@ -264,4 +264,19 @@
         }
         padding-top: 175px !important;
     }
+
+    //---------- ABOUT ----------//
+    .about-page {
+
+        //----------OUR-TEAM----------//
+        .our-team {
+            .content-slider {
+                .team-list {
+                    width: 300px !important;
+                    padding: 80px !important;
+                }
+            }
+        }
+        padding-top: 175px !important;
+    }
 }
