--- a/css/_smartphone.scss
+++ b/css/_smartphone.scss
@@ -259,4 +259,36 @@
         }
         padding-top: 130px !important;
     }
+
+    //---------- ABOUT ----------//
+    .about-page {
+
+         //----------OUR-TEAM----------//
+         .information {
+             .wr-information {
+                background-color: #fff;
+                padding: 30px 15px;
+                box-shadow: $shadow-artikel;
+             }
+             background-color: transparent !important;
+             padding: 0px 15px !important;
+             box-shadow: none !important;
+         }
+
+        //----------OUR-TEAM----------//
+        .our-team {
+            .content-slider {
+                .team-list {
+                    width: 400px !important;
+                    padding: 100px !important;
+                }
+                .bx-controls-direction {
+                    .prev-list, .next-list {
+                        visibility: hidden;
+                    }
+                }
+            }
+        }
+        padding-top: 130px !important;
+    }
 }
