nambah page gallery

--- a/css/_device-1024.scss
+++ b/css/_device-1024.scss
@@ -31,4 +31,21 @@
         }
         padding-top: 130px !important;
     }
+
+    //---------- GALLERY ----------//
+    .gallery {
+        .image {
+            .wr-image {
+                .list-image {
+                    .photo {
+                        .wr-photo {
+                            img {
+                                height: 160px !important;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
