--- a/css/_smartphone.scss
+++ b/css/_smartphone.scss
@@ -291,4 +291,27 @@
         }
         padding-top: 130px !important;
     }
+
+    //---------- GALLERY ----------//
+    .gallery {
+        .image {
+            .wr-image {
+                .title {
+                    h1 {
+                        font-size: 32px !important;
+                    }
+                }
+                .list-image {
+                    .photo {
+                        .wr-photo {
+                            img {
+                                height: 160px !important;
+                            }
+                        }
+                    }
+                }
+            }
+            padding: 0px 15px;
+        }
+    }
 }
