--- a/css/custom.css
+++ b/css/custom.css
@@ -468,7 +468,10 @@ body {
     padding-top: 130px !important; }
     .about-page .our-team .content-slider .team-list {
       width: 400px !important;
-      padding: 100px !important; } }
+      padding: 100px !important; }
+
+  .gallery .image .wr-image .list-image .photo .wr-photo img {
+    height: 160px !important; } }
 @media (min-width: 768px) and (max-width: 1023px) {
   .header .navbar-custom {
     height: auto; }
@@ -579,7 +582,14 @@ body {
     padding-top: 175px !important; }
     .about-page .our-team .content-slider .team-list {
       width: 300px !important;
-      padding: 80px !important; } }
+      padding: 80px !important; }
+
+  .gallery {
+    padding-top: 175px !important; }
+    .gallery .image .wr-image .title h1 {
+      font-size: 32px !important; }
+    .gallery .image .wr-image .list-image .photo .wr-photo img {
+      height: 160px !important; } }
 @media (max-width: 767px) {
   .header .navbar-custom {
     height: auto; }
@@ -719,7 +729,14 @@ body {
       width: 400px !important;
       padding: 100px !important; }
     .about-page .our-team .content-slider .bx-controls-direction .prev-list, .about-page .our-team .content-slider .bx-controls-direction .next-list {
-      visibility: hidden; } }
+      visibility: hidden; }
+
+  .gallery .image {
+    padding: 0px 15px; }
+    .gallery .image .wr-image .title h1 {
+      font-size: 32px !important; }
+    .gallery .image .wr-image .list-image .photo .wr-photo img {
+      height: 160px !important; } }
 .single-post {
   padding-top: 130px;
   margin-bottom: 50px; }
@@ -1158,5 +1175,50 @@ body {
     .about-page .our-team .content-slider .bx-controls-direction .bx-next:hover {
       text-decoration: none;
       color: #48cfad; }
+
+.gallery {
+  padding-top: 130px; }
+  .gallery .image {
+    margin-bottom: 50px; }
+    .gallery .image .wr-image {
+      padding: 30px 0px;
+      background-color: #fff; }
+      .gallery .image .wr-image .title {
+        margin-bottom: 30px; }
+        .gallery .image .wr-image .title h1 {
+          margin: 0px;
+          font-family: 'Open Sans', sans-serif;
+          font-weight: 400;
+          font-size: 38px; }
+      .gallery .image .wr-image .list-image .photo {
+        margin-bottom: 20px;
+        padding: 0px 15px; }
+        .gallery .image .wr-image .list-image .photo .wr-photo {
+          position: relative;
+          overflow: hidden; }
+          .gallery .image .wr-image .list-image .photo .wr-photo img {
+            width: 100%;
+            height: 200px;
+            filter: brightness(70%);
+            -webkit-filter: brightness(70%);
+            -moz-filter: brightness(70%);
+            -ms-filter: brightness(70%);
+            -o-filter: brightness(70%);
+            -webkit-transition: 1s ease;
+            -moz-transition: 1s ease;
+            -ms-transition: 1s ease;
+            -o-transition: 1s ease;
+            transition: 1s ease; }
+          .gallery .image .wr-image .list-image .photo .wr-photo img:hover {
+            filter: brightness(100%);
+            -webkit-filter: brightness(100%);
+            -moz-filter: brightness(100%);
+            -ms-filter: brightness(100%);
+            -o-filter: brightness(100%);
+            -webkit-transform: scale(1.08);
+            -moz-transform: scale(1.08);
+            -ms-transform: scale(1.08);
+            -o-transform: scale(1.08);
+            transform: scale(1.08); }
 
 /*# sourceMappingURL=custom.css.map */
